<resources>
    <string name="app_name">SavvyCV4</string>
    <string name="no_device_found">No Device Found</string>
    <string name="searching_for_device">Searching for devices</string>
    <string name="tap_search_again">TAP TO SEARCH</string>
    <string name="devices">Devices</string>
    <string name="connect">Connect</string>
    <string name="device_name">Device Name</string>
    <string name="connected_successfully">Connected Successfully</string>
    <string name="battery_volt">BATT:</string>
    <string name="zero_scale">Zero Calibration</string>
    <string name="errorCode">Error Code</string>
    <string name="carvan_span">Caravan Span</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseWait">Please Wait..</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="measurement_unit">Measurement Units:</string>
    <string name="device_not_found">Device not found</string>
    <string name="span_units">Span Units:</string>
    <string name="inch">Inches</string>
    <string name="alert">Alert</string>
    <string name="mm">mm</string>
    <string name="needPermission" translatable="false">Need Permission</string>
    <string name="permissionDesc" translatable="false">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="gotoSettings" translatable="false">GOTO SETTINGS</string>
    <string name="allow" translatable="false">Allow</string>
    <string name="noDataFoundFromDevice" translatable="false">No data found from device or device disconnected</string>
    <string name="done" translatable="false">Done</string>
    <string name="deny" translatable="false">Deny</string>
    <string name="block" translatable="false"> Blocks</string>
    <string name="left_to_right_wheel">left to Right Wheel:</string>
    <string name="wheel_to_wheel">Wheel to Wheel:</string>
    <string name="left_to_right_wheel_new">Left to Right Wheel</string>
    <string name="wheel_to_wheel_span">Wheel to Wheel Span</string>
    <string name="front_to_rear_wheel">Front to Rear Wheel:</string>
    <string name="wheel_to_jockey_wheel">Wheel to Jockey Wheel:</string>
    <string name="block_type">Block Type</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="pleaseClickBackPress">Please click BACK again to exit</string>
    <string name="oziblock_n_chock">OziBlock n Chock</string>
    <string name="lynx_chock">Lynx Block and Chock</string>
    <string name="custom">Custom (use mm only)</string>
    <string name="options">Options</string>
    <string name="searchingDevice">Searching Device</string>
    <string name="connectSuccessful">Connect Successful</string>
    <string name="nearByDevice">Near by Device</string>
    <string name="splashScreen">Splash Screen</string>
    <string name="orientation">Orientation</string>
    <string name="portrait">Portrait</string>
    <string name="lScapeL">L\'scape L</string>
    <string name="lScapeR">L\'scape R</string>
    <string name="enable_tilt_height">Enable Tilt Height</string>
    <string name="enable_battery">Enable Battery Indicator</string>
    <string name="connected_device">Connected Device</string>
    <string name="show_tutorial">Show Tutorial Again</string>
    <string name="change_device">Change Device</string>
    <string name="or">OR</string>
    <string name="error_code">Error Code:</string>
    <string name="error_code_without_colon">Error Code</string>
    <string name="clearErrorCode">Clear Error Code</string>
    <string name="submit_error_code">Submit Error Code</string>
    <string name="check_error_code">Check Error Code</string>
    <string name="savvylevel">SavvyLevel</string>
    <string name="version_app">Version&#160;</string>
    <string name="sts">2016 - 2021 STS</string>
    <string name="savvy_technical_solution">SAVVY TECHNICAL SOLUTION</string>
    <string name="savvy_technical_solution_pvt_ltd">Savvy Technical Solutions Pty. Ltd.</string>
    <string name="device_details">Device Details</string>
    <string name="version_device_title">Version:</string>
    <string name="version_device">3.05</string>
    <string name="build_device_title">Build:</string>
    <string name="build_device">190904.1600</string>
    <string name="visit_us">Visit Us</string>
    <string name="product_info">Product Information:</string>
    <string name="pleaseFeelFree">Please feel free to visit us at:</string>
    <string name="savvy_website">savvylevel.store</string>
    <string name="savvy_website_three">www.savvytechnicalsolutions.net</string>
    <string name="savvy_website_two">all_rv@savvylevel.com</string>
    <string name="support_savvy_tech">all_rv@savvylevel.com</string>
    <string name="help_us">We are constantly improving our apps to enhance your experience with our product. We welcome your suggestions for improvements, please email these to:</string>
    <string name="help_us_old"> We are constantly improving our apps to enhance your experience with our product. We welcome your suggestions for improvements, please email these to:</string>
    <string name="support_url">support@savvytechnicalsolution.net</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="read">Read</string>
    <string name="end_user_agreement">End User Agreement</string>
    <string name="blutoothPermission">Bluetooth Permission</string>
    <string name="turnOnBluetoothToAllowSavvyCarvanToConnectToAccessories">"Turn On Bluetooth to Allow &quot;SavvyCV4&quot; to Connect to Accessories"</string>
    <string name="credits">Credits</string>
    <string name="wheel_to_jockey">Wheel to Jockey Wheel Span</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="end_user_agreement_paragraph_one">SavvyLevel is fit for purpose from design to manufacture. No known negligence is to be ascribed to the company Savvy Technical Solutions Pty Ltd or its distributors. At all junctures full attention to detail has been preserved.</string>
    <string name="end_user_agreement_paragraph_two">Savvy Technical Solutions Pty Ltd repudiates (implied or otherwise) all exemplifications, including its condition, any latent software or  hardware defects, implied (if any). merchantability, non-infringement, fitness for purpose, lack of level - the entire risk of use or performance of SavvyLevel lies in its entirety with the user.</string>
    <string name="end_user_agreement_paragraph_three">Under no circumstances is SavvyLevel and/or the company Savvy Technical Solutions Pty Ltd. or its distributors, liable for any consequential, subsidiary, direct or indirect damages whatsoever.</string>
    <string name="end_user_agreement_paragraph_four">Any damage, both personal and property, associated with the use of SavvyLevel, that may occur for any reason whatsoever without limitation, cannot be attributed to Savvy Technical Solutions Pty Ltd. All damages referenced above, and all direct and indirect damages. SavvyLevel and therefore Savvy Technical Solutions are not liable, (or any of their distributors).</string>
    <string name="credits_description">HM10-BluetoothSerial-iOS by Alex van der Lugt © 2015.\nLicensed under Alex van der Lugt. Sourced via Github.\nDesaturated from original.</string>
    <string name="for_dual_axle">For dual axle caravans choose the wheel measuring point midway between both wheels.</string>
    <string name="wheel_to_wheel_span_desc">Please select span length in your chosen units from wheel to wheel as shown above.</string>
    <string name="wheel_to_jockey_wheel_span_desc">Please select span length in your chosen units from wheel to jockey wheel as shown above.\n For dual axle caravans choose the wheel measuring point midway between both wheels.</string>
    <string name="measurements_unit">Measurement Units</string>
    <string name="span_units_dialog_title">Span Units</string>
    <string name="please_select_units">Please select units you will use to measure your caravan span. Select either millimeters or inches.</string>
    <string name="caution">Caution!</string>
    <string name="ensure_vehicle">Ensure vehicle with installed device is on level ground before you proceed.</string>
    <string name="access_settings">To access settings you need to be connected to SavvyLevel device</string>
    <string name="are_you_sure_zero_scale">Are you sure that you want to continue?</string>
    <string name="are_you_sure_error_code">Are you sure you want to clear the error code?</string>
    <string name="about_us">About Us</string>
    <string name="please_press_seconds">Please press &amp; hold for at least 2 seconds</string>
    <string name="are_you_want_hitch">Are you sure you want to clear hitch?</string>
    <string name="about_usFrag">About Us Fragment</string>
    <string name="home">Home</string>
    <string name="homeFrag">Home Fragment</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="errorText">Follow the help desk instruction and report the value in the ‘Error Code’ box below (exactly as written). If you accidentally entered here just press cancel.</string>
    <string name="submitErrorCode">Submit Error Code</string>
    <string name="settingsFrag">Settings Fragment</string>
    <string name="blocks">0 Blocks</string>
    <string name="mms">0</string>
    <string name="clear_hitch">Clear Hitch</string>
    <string name="set_hitch">Set Hitch</string>
    <string name="cancel_hitch">Cancel Hitch</string>
    <string name="ten_x">10x</string>
    <string name="nearest_device">Nearest device will be shown first</string>
    <string name="request_error_code">Request Error Code</string>
    <string name="measurment">Measurment</string>
    <string name="please_follow">Please follow this instructions.</string>
    <string name="click_here">Click here</string>
    <string name="scan_device">Scan Device</string>
    <string name="terms_privacy">By tapping on Scan Device, you are agreeing to our Privacy Policy and Terms and Conditions.</string>
    <string name="welcome_to_savvylevel">Welcome to SAVVYLEVEL</string>
    <string name="quick_tutorial">Quick Tutorial\n\n\nTap screen to continue</string>
    <string name="ten_x_zoom">10X Zoom</string>
    <string name="ten_x_zoom_description">You can zoom-in/zoom-out by clicking this button\nZooming in will indicate the wheel that is down\nRamp the wheel that SavvyLevel shows as down\nDrive forward up the ramp until level (you can reverse up the ramp also)</string>
    <string name="hitch_setup">Hitch Setup</string>
    <string name="hitch_setup_description">You can set/release the hitch height marker with a long press of this button</string>
    <string name="battery">Battery</string>
    <string name="battery_description">This is indicates battery voltage not phone battery</string>
    <string name="bluetooth_strength">Bluetooth Strength</string>
    <string name="bluetooth_strength_description">This icon represents SavvyLevel\'s signal strength and connectivity</string>
    <string name="hitch_value_saved">Hitch value saved</string>
    <string name="zero_calibration_success">Zero Calibration set successfully</string>
    <string name="zero_calibration">Zero Calibration</string>
    <string name="default_hint_value">0x00</string>
</resources>