<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_dialog_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_15sdp">

    <LinearLayout
        android:id="@+id/linMainErrorCodePopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/_15sdp"
            android:text="@string/errorCode"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/submitErrorCode"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/errorText"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/error_code"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/_11sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvErrorCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/boarder_gray"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/default_hint_value"
            android:textAllCaps="false"
            android:inputType="number"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:id="@+id/relRequestErrorCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/request_error_code_bg"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/pbLoaderSettings"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRequestErrorCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_toEndOf="@+id/pbLoaderSettings"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/request_error_code"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnECCancelCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/boarder_button_dialog"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/clearErrorCode"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/txtECCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/cancel"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linMainClearErrorCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/_15sdp"
            android:text="@string/clearErrorCode"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4CA0D1" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvClearErrorCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:src="@drawable/warning_dailog" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/caution"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/are_you_sure_error_code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <Button
                    android:id="@+id/btnYesClearCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/red_dialog"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/btnNoClearCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/rect_boarder_with_corner_radius"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_7sdp"
                    android:text="@string/no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>