<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_dialog_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_15sdp">

    <TextView
        android:id="@+id/txtDCATitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/blutoothPermission"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12ssp" />

    <View
        android:id="@+id/viewDCALine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txtDCATitle"
        android:background="#4CA0D1" />

    <TextView
        android:id="@+id/txtDCAMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewDCALine"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_7sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/end_user_agreement_paragraph_one"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <Button
        android:id="@+id/btnDCAAllow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDCAMessage"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/dilog"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="@dimen/_4sdp"
        android:text="@string/allow"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />

</RelativeLayout>