<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/wheel_to_jockey"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_12sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivWTJLogo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center"
            android:src="@drawable/carvan_dialog_new"
            app:layout_constraintBottom_toTopOf="@+id/tvWTJTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWTJTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/wheel_to_jockey_wheel_span_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toTopOf="@+id/btnWTJOk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivWTJLogo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnWTJOk"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:background="@drawable/dilog"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWTJTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>